#399 - Mindmap-Ui_issue_When i Close Right and Left grid. Modules List Bar is Overlap in Right Grid Fixed

--- a/public/css/css_mindmap/style.css
+++ b/public/css/css_mindmap/style.css
@@ -279,3 +279,11 @@ select
     position: relative;
     left: 160px;
 }
+.selectProject
+{
+    margin-right: 0px !important;
+}
+.ct-expand-module
+{
+    width: 88.5% !important;
+}
